--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-project(minitensor_C LANGUAGES CXX CUDA)
+project(minitensor LANGUAGES CXX CUDA)
 
 find_package(pybind11 REQUIRED)
 find_package(CUDA REQUIRED)
@@ -8,13 +8,6 @@ set(CMAKE_CUDA_ARCHITECTURES "75")
 set(CMAKE_CXX_FLAGS "-O3")
 set(CMAKE_CUDA_FLAGS "-O3")
 
-set(SOURCE_DIR "minitensor/_C")
-include_directories(${SOURCE_DIR})
-
-set(SOURCES 
-  "${SOURCE_DIR}/kernels.cu"
-)
-
 if(${CUDA_ERROR_CHECK} MATCHES "True")
   add_compile_definitions(__CUDA_ERROR_CHECK__)
 endif()
@@ -22,5 +15,5 @@ if(${CUDNN_ERROR_CHECK} MATCHES "True")
   add_compile_definitions(__CUDNN_ERROR_CHECK__)
 endif()
 
-pybind11_add_module(${PROJECT_NAME} ${SOURCES} "${SOURCE_DIR}/bindings.cpp")
-target_link_libraries(${PROJECT_NAME} PUBLIC -lcudnn)
+add_subdirectory("minitensor/_C/cuda")
+add_subdirectory("minitensor/_C/cudnn")
